k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: feature-service
  labels:
    name: feature-service
    environment: production
