k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: feature-service
  namespace: feature-service
  labels:
    app: feature-service
spec:
  type: ClusterIP
  selector:
    app: feature-service
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: feature-service-headless
  namespace: feature-service
  labels:
    app: feature-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: feature-service
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
